<resources>
    <string name="app_name">Draconians</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
    <item>@string/nav_item_home</item>
    <item>@string/nav_item_friends</item>
    <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="profilePicture">Profile Picture</string>
    <string name="person_name">Peleg Wadsworth</string>
    <string name="person_email">testuser@gmail.com</string>
    <string name="member_status">Active Member</string>
    <string name="action_members">Members</string>
    <string name="title_members">Members</string>
    <string name="title_main">Draconian Fleet</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_votes">Votes</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_help">Help</string>
    <string name="drawer_menu_feedback">Feedback</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="drawer_menu_dues">Dues</string>
    <string name="drawer_menu_report_bug">Report Bug</string>
    <string name="news_layout_cardview_desc">Have you got what it takes to truly be called a pirate? Do you deserve a piece of this glorious treasure? The Pirates have plundered hoards of Treasure all year round. Now is the time to stake your claim on this Bountiful Booty.</string>
    <string name="news_layout_cardview_title">9th Annual Pirates Plunder</string>
    <string name="testdesc"><![CDATA[Step back in time for a day of revels at the Faire In The Grove! JoinMcMenamins Grand Lodge, and The Barony of Dragon\'s mist, Medieval Re-enactors, Armored Fighters & History Buffs, who invite you to experience the Middle Ages and the Renaissance!]]></string>

    <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>

    <string name="pref_sync_summ">Stuff</string>
    <string name="pref_sync">More stuff</string>

</resources>
