<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:checkableBehavior="single"
        android:id="@+id/group_main_id">
        <item
            android:title="@string/drawer_menu_home"
            android:checked="false"
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_home_black_24dp"
            />
        <item
            android:title="@string/drawer_menu_votes"
            android:checked="false"
            android:id="@+id/nav_item_votes"
            android:icon="@drawable/ic_check_box_black_24dp"
            />

        <item
            android:title="@string/drawer_menu_dues"
            android:checked="false"
            android:id="@+id/nav_item_dues"
            android:icon="@drawable/ic_payment_black_24dp"
            />

    </group>

    <group
        android:id="@+id/group_settings_id"
        android:checkableBehavior="single">
        <item
            android:title="@string/drawer_menu_settings"
            android:id="@+id/nav_item_settings"
            android:checked="false"
            android:icon="@drawable/ic_settings_black_24dp"/>
        <item
            android:title="@string/drawer_menu_help"
            android:id="@+id/nav_item_help"
            android:checked="false"
            android:icon="@drawable/ic_help_black_24dp"/>
        <item
            android:title="@string/drawer_menu_feedback"
            android:id="@+id/nav_item_feedback"
            android:checked="false"
            android:icon="@drawable/ic_feedback_black_24dp"/>
        <item
            android:title="@string/drawer_menu_report_bug"
            android:checked="false"
            android:id="@+id/nav_item_bug"
            android:icon="@drawable/ic_bug_report_black_24dp"
            />

    </group>

    <group
        android:id="@+id/group_logout_id"
        android:checkableBehavior="none">
        <item
            android:title="@string/drawer_menu_logout"
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_person_black_24dp"/>


    </group>

</menu>