<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        card_view:cardBackgroundColor="#ffff"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardMaxElevation="6dp"
        card_view:cardPreventCornerOverlap="false"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/pirateship" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thumbnail"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/news_layout_cardview_title"
                android:textColor="#222"
                android:textStyle="bold"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/news_layout_cardview_desc"
                android:textColor="#666"
                android:textSize="14sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        card_view:cardBackgroundColor="#ffff"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardMaxElevation="6dp"
        card_view:cardPreventCornerOverlap="false"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/thumbnail2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/faire" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thumbnail2"
                android:maxLines="3"
                android:padding="8dp"
                android:text="Faire in the Grove"
                android:textColor="#222"
                android:textStyle="bold"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title2"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/testdesc"
                android:textColor="#666"
                android:textSize="14sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
</ScrollView>